Fixed layout issue

--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ h1, h2, strong {
 
 .footer {
     background: #ebebeb;
-    padding: 4em 0;
+    padding: 7em 0;
     text-align: center;
     
     grid-template-areas:
@@ -305,6 +305,7 @@ h1, h2, strong {
     
     .footer-main {
         text-align: left;
+
     }
     
     .social-list {
